# trame

./: .codespellrc  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  atom.xml  index.html  package-lock.json  package.json  proxy-mapping.txt  pypi_readme.rst  pyproject.toml  ruff.toml  setup.cfg  setup.py  sitemap.xml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docker.yml  pr-checks.yml  pypi.yml  test_and_release.yml  website.yaml  website.yml
css/: navy.css
doc/: config.js
doc/data/: menu.yml
docker/: Dockerfile  Dockerfile.common  Dockerfile.conda  Dockerfile.pip  Dockerfile.uv  README.md
docker/config/: default-launcher.json
docker/config/apache/: 001-trame.conf  001-trame.tpl
docker/scripts/: build.sh  entrypoint.sh  fix_uid_gid.sh  generate_launcher_config.py  generate_www.py  make_directories.sh  monitor_sessions.py  run.sh  runtime_patch.sh  server.sh  setup.sh  start.sh  yaml_to_json.py
docker/scripts/conda/: activate_venv.sh  create_venv.sh  install_requirements.sh
docker/scripts/pip/: activate_venv.sh  create_venv.sh  install_requirements.sh
docker/scripts/uv/: create_venv.sh  install_requirements.sh
docs/: api.html  cheatsheet.html  concepts.html  config.js  cookbook.html  course_intro.html  deploy-cloud.html  deploy-desktop.html  deploy-hpc.html  deploy-jupyter.html  deploy-nginx.html  deploy-pypi.html  getting_started.html  howdoi-bind.html  howdoi-button.html  howdoi-cli.html  howdoi-debug.html  howdoi-download.html  howdoi-dynamic.html  howdoi-files.html  howdoi-input.html  howdoi-interactive.html  howdoi-static.html  howdoi-table.html  howdoi-upload.html  index.html  module-altair.html  module-deckgl.html  module-markdown.html  module-paraview.html  module-simput.html  module-vega.html  module-vtk.html  module-vuetify.html  module-widgets.html  print_tutorial.js  trame_roadmap_intro.html  trame_v1-2.html  trame_v2-3.html  trame_v2_intro.html  (+14 more)
docs/api/: README.md  local_build.sh  requirements.txt
docs/api/source/: .gitignore  client.intro.rst  client.utils.rst  conf.py  core.controller.rst  core.server.rst  core.state.rst  core.ui.rst  core.vn_manager.rst  core.widget.rst  index.rst  tools.app.rst  tools.docker.rst  tools.monitor.rst  tools.profiler.rst  tools.publish.rst  tools.retry.rst  tools.serve.rst  tools.singularity.rst  tools.vtk.rst  tools.widgets.rst  tools.wigets.rst  tools.www.rst  trame.html.deckgl.rst  trame.html.markdown.rst  trame.html.paraview.rst  trame.html.rst  trame.html.simput.rst  trame.html.vega.rst  trame.html.vtk.rst  trame.html.vuetify.rst  trame.html.widgets.rst  trame.layouts.rst  trame.rst
docs/content/: index.pug
docs/content/docs/: _tmp.md  api.md  cheatsheet.md  concepts.md  cookbook.md  course_intro.md  deploy-cloud.md  deploy-desktop.md  deploy-hpc.md  deploy-nginx.md  deploy-pypi.md  getting_started.md  howdoi-bind.md  howdoi-button.md  howdoi-cli.md  howdoi-debug.md  howdoi-dynamic.md  (+33 more)
docs/data/: menu.yml
docs/tpl/: __en__  __sidebar__
docs/vitepress/: external_gh_repos.txt  external_repos.yml  fetch_repos.py  index.md  news.md  package-lock.json  package.json  repos.json  update_blogs.py
examples/: index.html
examples/00_howdoi/: README.md  cli.py  data_from_remote_url.py  download.py  dynamic.py  interactive.py  mutli-server.py  requirements.txt  static.py  table.py  table_dyna.py  upload.py
examples/01_Tutorial/: README.md
examples/02_vuetify/: 00_dataframe-table-vue3.py  00_dataframe-table.py  01_menu.py  01_menu_v3.py  02_router.py  README.md  requirements.txt
examples/03_markdown/: 01_markdown.py  README.md  demo.md  module.md  requirements.txt  sample.md
examples/04_trame-components/: 01_floatcard.py  02_git_tree.py  03_advanced_git_tree.py  README.md  requirements.txt
examples/05_charts/: README.md
examples/06_vtk/: README.md
examples/07_paraview/: README.md
examples/08_pydeck/: 00_mapping-demo.py  01_uber-nyc-pickups.py  README.md  requirements.txt
examples/09_advanced/: busy-task.py  external-esm.py
examples/ParaView/: README.md  venv.py
examples/core_features/: app.py  custom_css.py  download_binary.py  download_txt.py  dynamic_layout.py  events.py  hot_reload.py  images_http.py  images_inline.py  jupyter.py  life_cycle.py  life_cycle_class.py  multi_layout.py  reserved_state.py  state.py  sys_filebrowser.py  upload.py
examples/data/: can.json  f1.vtp  mesh.vtu
examples/howdoi/: cli.py  download.py  dynamic.py  interactive.py  requirements.txt  static.py  upload.py
examples/jupyter/: multi-tasks.ipynb
examples/validation/: README.md
examples/www/: README.md  app.py
js/: lang_select.js
news/: index.html
news/2016/: index.html
src/trame/: decorators.py
tests/: test_app.py  test_decorators.py  test_import.py
tests/html/: test_vuetify.py
tests/internal/: test_app.py  test_dev.py  test_server.py  test_state.py  test_triggers.py  test_utils.py
tests/layouts/: test_core.py
trame/: __init__.py  version.py
trame/app/: __init__.py  app.py  asynchronous.py  cone.py  core.py  demo.py  dev.py  file_upload.py  jupyter.py  jupyter_css.py  mimetypes.py  pv_demo.py  singleton.py  testing.py
trame/assets/: local.py  remote.py
trame/decorators/: __init__.py  dev.py  klass.py
trame/dev/: __init__.py  dev.py
trame/env/: paraview.py  utils.py  venv.py
trame/html/: __init__.py
trame/internal/: __init__.py
trame/jupyter/: __init__.py  display.py  proxy.py
trame/layouts/: __init__.py  core.py
trame/server/: __init__.py  server.py
trame/state/: __init__.py  core.py  decorators.py  state.py
trame/tools/: app.py  profiler.py  retry.py  serve.py  vtk.py  www.py
trame/trigger/: __init__.py  controller.py  core.py  decorators.py
trame/utils/: __init__.py  app_server_thread.py  asynchronous.py  cli.py  client_window_process.py  compose.py  desktop.py  exec.py  logging.py  version.py
trame/widgets/: helper.py
(+611 files in other folders)
