[metadata]
name = trame
version = dev
description = Framework for building interactive Web applications quickly in plain Python
long_description =
    simple, powerful, innovative
    trame - a web framework that weaves together open source components into customized visual analytics easily.
    trame is French for
        - the core that ties things together
        - a guide providing the essence of a task
    With trame, create stunning, interactive web applications compactly and intuitively.
    ## 3D Visualization
    VTK and ParaView are first-class citizens at the core of **trame**, providing complete control of 3D visualizations and data movement. The developers enjoy a write-once environment while trame simply exposes both local and remote rendering through a single method.
    With best-in-class VTK and ParaView platforms at its core, **trame** provides complete control of 3D visualizations and data movements.
    Developers benefit from a write-once environment while **trame** simply exposes both local and remote rendering through a single method.
    ## Rich Features
    trame leverages existing libraries and tools such as Vuetify, Altair, Vega, deck.gl, VTK, ParaView, and more, to create vivid content for visual analytics applications.
    ## Problem Focused
    By relying simply on Python and HTML, trame focuses on one's data and associated analysis and visualizations while hiding the complications of web development.
    ## Desktop to cloud
    The resulting trame applications act as local desktop applications or remote cloud applications both accessed through the browser.
author = Kitware, Inc.
author_email = kitware@kitware.com
url = https://github.com/kitware/trame
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
install_requires = pywebvue
include_package_data = True

[options.entry_points]
console_scripts =
    trame = trame:main
