[metadata]
name = trame
version = 3.3.0
description = Trame, a framework to build applications in plain Python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame-server>=2.13.1
    trame-client>=2.14.0

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
